--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -2,7 +2,7 @@
 <view class='ek-wrapper'>
   <swiper indicator-dots="{{indicatorDots}}"
     autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-    <block wx:for="{{imgUrls}}">
+    <block wx:for="{{imgUrls}}" wx:key="{{item.id}}">
       <swiper-item>
         <image src="{{item}}" class="slide-image" />
       </swiper-item>
@@ -62,6 +62,7 @@
       wx:for="{{recommend}}"
       data-item="{{item}}"
       catchtap="toDetail"
+      wx:key="{{item.id}}"
       class="ek-recommend-list">
         <view class="ek-recommend-item">
           <image src="{{item.image_url}}" class="ek-recommend-item-img"></image>
