feat:购物车的加减删除功能

--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,16 +1,18 @@
 <!--pages/cart/cart.wxml-->
 <view class="ek-wrapper">
-  <view class="ek-container" wx:if="{{!isShow}}">
+  <view class="ek-container" wx:if="{{list.length ===0 }}">
     <view class="ek-item">
       <image src="../../libs/img/bag.png" class="ek-img"></image>
     </view>
     <view class="ek-text">购物车为空~</view>
-    <view class="ek-button">去逛逛</view>
+    <view class="ek-button" catchtap='toHome'>去逛逛</view>
   </view>
-  <view class="ek-container-content" wx:if="{{isShow}}">
+  <view class="ek-container-content" wx:if="{{list.length > 0 }}">
   <view class="ek-list"
   wx:for="{{list}}"
   wx:key="{{item.id}}"
+  data-item="{{item}}"
+  catchtap='jumpDetail'
    >
     <checkbox-group class="ek-box">
     <label class="checkbox">
@@ -25,14 +27,14 @@
       <view class="ek-list-price">￥{{item.price}}</view> 
     </view>
     <view class="ek-diff">
-      <view class="btn" data-id="{{item.id}}" bindtap='minusCount'>-</view>
+      <view class="btn" data-id="{{item.id}}" catchtap='minusCount'>-</view>
       <view class="count">{{item.count}}</view>
-      <view class="btn" data-id="{{item.itid}}" bindtap='addCount'>+</view>
-      <view class="del">删除</view>
+      <view class="btn" data-id="{{item.id}}" catchtap='addCount'>+</view>
+      <view class="del" data-id="{{item.id}}" catchtap='delCount'>删除</view>
     </view>  
   </view>
   </view>
-  <view class="ek-total">
+  <view class="ek-total" wx:if="{{list.length > 0 }}">
   <checkbox-group class="ek-total-box">
     <label class="checkbox">
       <checkbox />
@@ -40,7 +42,7 @@
   </checkbox-group>
     <view class="ek-total-text">全选</view>
     <view class="ek-total-number">合计：</view>
-    <view class="ek-total-num">￥0</view>
+    <view class="ek-total-num">￥{{totalPrice}}</view>
     <view class="ek-total-btn">去结算</view>
   </view>
    <view class="ek-bottom-contain"></view> 
