--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -172,7 +172,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(0,0,0,.7);
+  background-color: rgba(0, 0, 0, .7);
 }
 .ek-modal-bottom{
   position: fixed;
