--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -14,6 +14,37 @@ swiper{
   width: 100%;
   height: 100%;
 }
+.ek-map{
+  width: 100%;
+  border-top:2rpx solid #cdcdcd;
+  border-bottom:2rpx solid #cdcdcd;
+  margin-bottom: 20rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+  justify-content: space-around;
+  display: flex;
+}
+.position{
+  width:40rpx;
+  height:40rpx;
+}
+.position-img{
+  width: 100%;
+  height: 100%;
+}
+.phone{
+  margin-top: 6rpx;
+  width:60rpx;
+  height:60rpx;
+}
+.phone-img{
+  width: 100%;
+  height: 100%;
+}
+.text{
+  font-size: 28rpx;
+  margin-right: 240rpx;
+}
 .ek-wrapper-content{
   width: 100%;
   height:160rpx;
