--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -10,6 +10,9 @@ page{
   height: 150rpx;
   margin-bottom: 20rpx;
 }
+.ek-list-item{
+  display: flex;
+}
 .ek-item{
   margin: 20rpx;
   border: 2rpx solid #cdcdcd;
@@ -23,13 +26,15 @@ page{
   height: 100%;
 }
 .ek-top-name{
-  margin-left: -340rpx;
+  margin-left: -40rpx;
   margin-top: 30rpx;
 }
 .ek-name{
+  margin-left: 40rpx;
   font-size: 30rpx;
 }
 .ek-huiyuan{
+  margin-left: 40rpx;
   border-radius: 10px;
   font-size: 24rpx;
   margin-top: 10rpx;
@@ -39,15 +44,18 @@ page{
   text-align: center;
   color: #fff;
   background: rgb(235, 212, 5);
-}
-.ek-ma{
-  width: 60rpx;
+} 
+button{
+  line-height: 60rpx;
+  text-align: center;
+  border-radius: 10rpx;
+  width: 150rpx;
   height: 60rpx;
-  margin: 40rpx;
-}
-.ek-ma-img{
-  width: 100%;
-  height: 100%;
+  font-size: 28rpx;
+  margin-top: 60rpx;
+  margin-right: 40rpx;
+  color: #fff;
+  background: rgb(235, 212, 5);
 }
 .ek-myorder{
   width: 100%;
@@ -114,5 +122,20 @@ text{
   text-align: center;
   margin: 0 auto;
   border: 4rpx solid rgb(252, 222, 135);
+  margin-top: 40rpx;
+}
+.ek-photo{
+  display: flex;
+}
+.ek-photo-item{
+  width: 150rpx;
+  height: 150rpx;
+}
+.ek-photo-img{
+  width: 100%;
+  height: 100%;
+}
+.ek-photo-name{
+  font-size: 28rpx;
   margin-top: 40rpx;
 }
