--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,7 +1,7 @@
 <!--pages/search/search.wxml-->
 <view class="ek-wrapper">
   <view class="section">
-    <input  bindinput="bindKeyInput" placeholder="拿破仑蛋糕" auto-focus/>
+    <input  bindinput="bindKeyInput" value="{{inputValue}}" placeholder="拿破仑蛋糕" auto-focus/>
   </view>
   <view class="ek-button" catchtap="search">搜索</view>
 </view>
